# tabpfn_feature_encoder

./: .gitignore  README.md  pyproject.toml
.codex/skills/atlas-root-cp-data/: SKILL.md
.codex/skills/tabpfn-benchmarking/: SKILL.md
.codex/skills/tabpfn-encoder-debugging/: SKILL.md
.codex/skills/tabpfn-feature-encoder-runner/: SKILL.md
configs/: cp_encoder.yaml  cp_gnn.yaml  cp_transformer.yaml  smoke_gnn.yaml  smoke_source_gnn.yaml  source_gnn.yaml  source_residual_mlp.yaml  source_transformer.yaml
scripts/: plot_context_comparison.sh  run  run_cp_encoder.sh  run_cp_transfer.sh  run_full_workflow.sh  run_gamgam_transfer.sh  run_source_encoder.sh  run_source_transfer.sh  run_tests.sh  submit_perlmutter.sh
setup/: README.md  environment.yml
src/tabpfn_feature_encoder/: __init__.py  cli.py  config.py
src/tabpfn_feature_encoder/data/: __init__.py  atlas_root.py  base.py  gamgam_root.py  graphs.py  parallel.py  preprocessing.py
src/tabpfn_feature_encoder/evaluation/: __init__.py  benchmark.py  metrics.py  plots.py  transfer.py
src/tabpfn_feature_encoder/models/: __init__.py  encoders.py  factory.py  feature_gate.py  feature_mixer.py  gnn.py  mlp.py  tabpfn_adapter.py  torch_utils.py  transformer.py
src/tabpfn_feature_encoder/training/: __init__.py  artifacts.py  encoder_classifier.py  episodes.py  (+1 more)
tests/: test_atlas_features.py  test_benchmark.py  test_cli.py  test_config.py  test_encoder_classifier.py  test_encoders.py  test_episodes.py  test_gamgam_features.py  test_graphs.py  test_metrics.py  test_parallel.py  test_preprocessing.py  test_transfer.py
(+3 files in other folders)
