[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tabpfn-feature-encoder"
version = "0.1.0"
description = "Train lightweight encoders that optimize tabular feature inputs for TabPFN prompts."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "ATLAS TabPFN Encoder Contributors"}]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
train = [
    "torch>=2.2",
    "tabpfn>=2.0",
]
atlas = [
    "uproot>=5.0",
    "awkward-pandas>=2023.8.0",
]
plots = [
    "matplotlib>=3.8",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "mypy>=1.10",
]
all = [
    "torch>=2.2",
    "tabpfn>=2.0",
    "uproot>=5.0",
    "awkward-pandas>=2023.8.0",
    "matplotlib>=3.8",
    "pytest>=8.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
tabpfn-encoder-train = "tabpfn_feature_encoder.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tabpfn_feature_encoder = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]
ignore = ["N803", "N806"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
ignore_missing_imports = true
strict_optional = true
